--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,19 @@ OTEL_ENVIRONMENT=development
 # ============================================
 # URL base de la API (para que Streamlit se conecte)
 API_BASE_URL=http://localhost:8000/api/v1
+
+# ============================================
+# PRIORIZACIÓN DE EVENTOS
+# ============================================
+# Categorías consideradas de alta prioridad (separadas por coma)
+# Valores válidos: TRABAJO, SALUD, OCIO, RUTINA
+# Ejemplo: TRABAJO,SALUD
+HIGH_PRIORITY_CATEGORIES=TRABAJO
+
+# Niveles de prioridad considerados altos (separados por coma)
+# Valores válidos: critical, high, medium, low
+HIGH_PRIORITY_LEVELS=critical,high
+
+# Categoría para eventos de rutina (se colapsan en vistas resumidas)
+# Valores válidos: TRABAJO, SALUD, OCIO, RUTINA
+ROUTINE_CATEGORY=RUTINA
